fixed up content for projects & added contact form static

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Default React App</title>
+    <title>Jesus Celestino Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
